--- a/src/main/resources/NumberGameView.fxml
+++ b/src/main/resources/NumberGameView.fxml
@@ -6,9 +6,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="edu.neumont.csc150.view.NumberGameView"
-            prefHeight="400.0" prefWidth="600.0">
+            prefHeight="400.0" prefWidth="600.0"
+stylesheets="NumberGameView.css">
 
-</AnchorPane>
+</BorderPane>
