--- a/src/main/resources/fxml/NumberGameView.fxml
+++ b/src/main/resources/fxml/NumberGameView.fxml
@@ -8,8 +8,8 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.neumont.csc150.view.MemoryGameView"
+            fx:controller="edu.neumont.csc150.view.NumberGameView"
             prefHeight="400.0" prefWidth="600.0"
-stylesheets="MemoryGameView.css">
+stylesheets="../css/NumberGameView.css">
 
 </BorderPane>
