Fixed position of the cards. Added the missing ones for the other board's sizes.

--- a/src/main/resources/MemoryGameView.fxml
+++ b/src/main/resources/MemoryGameView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="edu.neumont.csc150.view.MemoryGameView"
@@ -24,8 +23,8 @@
             <VBox styleClass="vBox">
                 <GridPane fx:id="board" styleClass="board">
                 </GridPane>
-                <Label styleClass="currentScore">Current Score:</Label>
-                <Label styleClass="lives">Lives:</Label>
+                <Label fx:id="score" styleClass="currentScore">Current Score:</Label>
+                <Label fx:id="lives" styleClass="lives">Lives:</Label>
             </VBox>
             <VBox styleClass="vBox">
                 <Label styleClass="title, top"  >Leaderboard</Label>
